--- a/lisa/style.css
+++ b/lisa/style.css
@@ -53,8 +53,8 @@ body{
 }
 
 .side img{
-    max-height: 656px;
-    min-width: 1000px;
+    height: auto;
+    width: 1000px;
 }
 
 .description span{
