--- a/Button_Clicker/css/main.css
+++ b/Button_Clicker/css/main.css
@@ -8,7 +8,8 @@ body{
 
 #container{
     margin: auto;
-    width: 1366px;
+    max-width: 1366px;
+    min-width: 1100px;
     display: flex;
     justify-content: space-between;
 }
@@ -23,4 +24,10 @@ body{
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+@media screen and (max-width: 1366px){
+    .block{
+        width: 300px;
+    }
 }
