--- a/Button_Clicker/css/field.css
+++ b/Button_Clicker/css/field.css
@@ -32,6 +32,7 @@
     background: red;
     border-radius: 20px;
     opacity: 1;
+    cursor: pointer;
 }
 
 .field_margin{
@@ -46,4 +47,12 @@
     height: 100%;
     border-radius: 10px;
     top: 0;
+}
+
+.damage{
+    font-size: 32px;
+    color: white;
+    position: absolute;
+    z-index: 10000;
+    pointer-events: none;
 }
