--- a/Button_Clicker/css/upgrade.css
+++ b/Button_Clicker/css/upgrade.css
@@ -1,7 +1,7 @@
 .upgrade_item{
     width: 90%;
     border-radius: 20px;
-    margin: 20px;
+    margin: 20px 5%;
     border: 2px solid white;
     text-align: center;
     font-size: 32px;
