--- a/Button_Clicker/css/main.css
+++ b/Button_Clicker/css/main.css
@@ -50,6 +50,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 #dialog_yes{
