--- a/appoligeya/css/contact.css
+++ b/appoligeya/css/contact.css
@@ -1,5 +1,60 @@
 #contact{
     background: white;
-    padding: 40px 0;
-    text-align: center;
+    padding-bottom: 60px;
+}
+
+.contact-title{
+    font-size: 62px;
+    font-weight: bold;
+    margin: 35px 0;
+    color: #3d3d3e;
+}
+
+.contact-c{
+    font-size: 44px;
+    font-weight: bold;
+}
+
+.contact-c img{
+    margin-right: 5px;
+}
+
+.contact-or{
+    color: #3d3d3e;
+    font-size: 44px;
+    margin: 35px 0;
+    font-weight: bold;
+}
+
+.input-item input,
+.input-item textarea{
+    padding-bottom: 40px;
+    width: 600px;
+    padding-top: 5px;
+    padding-left: 5px;
+    font-family: inherit;
+    font-size: 24px;
+    margin-top: 20px;
+    border: 1px solid #97989a;
+}
+
+.input-item textarea{
+    resize: none;
+}
+
+.c-btn{
+    padding: 10px 60px;
+    color: #3d3d3e;
+    display: inline-block;
+    border: 1px solid #97989a;
+    margin-top: 15px;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    background: transparent;
+}
+
+.contact-container{
+    width: 600px;
+    margin: auto;
 }
