--- a/appoligeya/css/about.css
+++ b/appoligeya/css/about.css
@@ -1,38 +1,23 @@
 #about{
-    background: url("../img/notebook.png") no-repeat;
+    background: url(../img/notebook.png) no-repeat;
     background-size: cover;
     background-attachment: fixed;
     color: white;
-    padding: 40px 15px;
+    padding: 80px 0;
     text-align: center;
 }
 
-.about-container{
-    max-width: 900px;
-    margin: auto;
-    font-size: 18px;
+.about-smth{
+    font-size: 40px;
+    margin: 15px 0;
 }
 
 .about-title{
-    font-size: 32px;
-    margin: 20px 0;
-    text-transform: uppercase;
+    font-size: 60px;
+    font-weight: bold;
+    margin: 25px 0;
 }
 
-#about i{
-    margin: 0 10px;
-}
-
-.about-hr-first{
-    width: 100px;
-    height: 1px;
-    background: #49BF73;
-    margin: 10px auto;
-}
-
-.about-hr-second{
-    width: 70px;
-    height: 1px;
-    background: #409c59;
-    margin: 10px auto;
+.about-main{
+    font-size: 46px;
 }
