--- a/appoligeya/css/about.css
+++ b/appoligeya/css/about.css
@@ -1,5 +1,5 @@
 #about{
-    background: url(../img/notebook.jpg) no-repeat;
+    background: url(../img/notebook.png) no-repeat;
     background-size: cover;
     background-attachment: fixed;
     color: white;
