--- a/appoligeya/css/footer.css
+++ b/appoligeya/css/footer.css
@@ -8,3 +8,14 @@ footer{
     padding: 10px;
     border: 2px solid white;
 }
+
+@media screen and (max-width: 768px){
+    .footer-item{
+        margin-top: 15px;
+        width: 100%;
+    }
+
+    .footer-item i{
+        margin-right: 5px;
+    }
+}
