--- a/appoligeya/css/freelance.css
+++ b/appoligeya/css/freelance.css
@@ -18,3 +18,9 @@
 .f-title{
     font-size: 60px;
 }
+
+@media screen and (max-width: 768px){
+        .f-title{
+            font-size: 36px;
+    }
+}
