--- a/appoligeya/css/portfolio.css
+++ b/appoligeya/css/portfolio.css
@@ -14,7 +14,7 @@
 }
 
 .slider-item{
-    margin: 5px 25px;
+    margin: 5px 44px;
     cursor: pointer;
     max-height: 550px;
 }
@@ -32,4 +32,26 @@
     color: #676767;
     margin: 30px 0;
     font-weight: bold;
+}
+
+@media screen and (max-width: 1100px){
+    .prevArrow, .nextArrow{
+        display: none !important;
+    }
+
+    .slider-item img{
+        max-width: 320px;
+    }
+
+    .slick-slide{
+        height: auto;
+    }
+
+    .portf-slider{
+        max-width: 100%;
+    }
+
+    .p-title{
+        font-size: 40px;
+    }
 }
