--- a/appoligeya/css/footer.css
+++ b/appoligeya/css/footer.css
@@ -16,6 +16,21 @@ footer{
     }
 
     .footer-item i{
-        margin-right: 5px;
+        margin-right: 10px;
+        position: relative;
+        width: 17px;
+        height: 17px;
+    }
+
+    .footer-item a{
+        display: flex;
+        align-items: center;
+    }
+
+    .footer-item i:before{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 }
