--- a/appoligeya/css/main.css
+++ b/appoligeya/css/main.css
@@ -29,7 +29,7 @@ a{
     width: 100vw;
     height: 100vh;
     z-index: -2;
-    background: url(../img/header.png) no-repeat center center fixed;
+    background: url(../img/header.png) no-repeat center center;
     background-size: cover;
 }
 
