--- a/appoligeya/css/portfolio.css
+++ b/appoligeya/css/portfolio.css
@@ -5,6 +5,7 @@
 
 .portf-slider{
     max-width: 1000px;
+    height: 630px;
 }
 
 .portf-slider img{
@@ -15,8 +16,8 @@
 
 .slider-item{
     margin: 5px 44px;
-    cursor: pointer;
-    max-height: 550px;
+    max-height: 650px;
+    max-width: 415px;
 }
 
 .nextArrow,
@@ -27,11 +28,38 @@
     cursor: pointer;
 }
 
+.arrow-container{
+    width: 35px;
+    height: 35px;
+    margin: auto;
+    text-align: center;
+}
+
 .p-title{
     font-size: 60px;
     color: #676767;
     margin: 30px 0;
     font-weight: bold;
+}
+
+.p-item-name{
+    margin-bottom: 10px;
+    font-size: 50px;
+    color: black;
+    text-align: center;
+    height: 55px;
+}
+
+.p-item-href{
+    text-align: center;
+    margin-top: 10px;
+    font-size: 40px;
+    color: black;
+    height: 45px;
+}
+
+.p-item-href a{
+    text-decoration: underline;
 }
 
 @media screen and (max-width: 1100px){
