--- a/appoligeya/motion/css/main.css
+++ b/appoligeya/motion/css/main.css
@@ -23,7 +23,7 @@ a{
 }
 
 .container{
-    width: 1366px;
+    width: 100%;
     margin: auto;
 }
 
@@ -79,7 +79,8 @@ nav{
 }
 
 .header-text{
-    font-size: 60px;
+    text-align: center;
+    font-size: 40px;
     color: white;
 }
 
@@ -89,11 +90,11 @@ nav{
 
 .header-btn a{
     text-align: center;
-    width: 300px;
-    height: 80px;
-    margin: 0 50px;
-    line-height: 80px;
-    font-size: 44px;
+    width: 250px;
+    height: 60px;
+    margin: 0 70px;
+    line-height: 60px;
+    font-size: 32px;
     background: rgba(62,52,50, 0.8);
     color: white;
     border-radius: 10px;
@@ -137,11 +138,12 @@ nav{
 }
 
 .sec-title{
-    font-size: 42px;
+    font-size: 36px;
     color: #828282;
     font-weight: bold;
-    padding-left: 15px;
+    padding-left: 35px;
     padding-right: 150px;
+    margin-top: 35px;
 }
 
 .reverse .sec-title,
@@ -152,8 +154,8 @@ nav{
 .sec-desc{
     color: #828282;
     margin-top: 20px;
-    font-size: 24px;
-    padding-left: 15px;
+    font-size: 30px;
+    padding-left: 35px;
     padding-right: 150px;
 }
 
@@ -167,7 +169,7 @@ nav{
     padding: 0;
     background: white;
     float: right;
-    width: 90%;
+    width: 100%;
 }
 
 .section-text.reverse{
@@ -196,7 +198,7 @@ nav{
 }
 
 .footer-title{
-    padding: 20px 80px;
+    padding: 20px 120px;
     color: white !important;
     font-size: 30px;
     font-weight: bold;
@@ -213,6 +215,10 @@ nav{
     color: white !important;
     padding: 10px 0;
     text-transform: uppercase;
+}
+
+.footer-navigation{
+    margin-bottom: 100px;
 }
 
 .footer-nav-item{
