--- a/appoligeya/css/portfolio.css
+++ b/appoligeya/css/portfolio.css
@@ -10,8 +10,9 @@
 
 .portf-slider img{
     object-fit: cover;
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 490px;
+    object-position: top;
 }
 
 .slider-item{
@@ -43,7 +44,7 @@
 }
 
 .p-item-name{
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     font-size: 50px;
     color: black;
     text-align: center;
