--- a/Itop/css/footer.css
+++ b/Itop/css/footer.css
@@ -2,11 +2,11 @@ footer{
     background: #282828;
     padding: 50px 0;
     color: white;
-} 
- 
+}
+
 .footer-contact-sep{
     width: 2px;
-    height: 100%;
+    height: auto;
     background: #1db954;
 }
 
@@ -33,4 +33,26 @@ footer{
 
 .footer-socials a:hover{
     opacity: 0.7;
+}
+
+@media screen and (max-width: 600px){
+    .footer-contact{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-contact > div{
+        margin-top: 30px;
+    }
+
+    .footer-socials{
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .footer-socials a{
+        margin: 0 20px;
+    }
 }
