--- a/elnova/css/furniture.css
+++ b/elnova/css/furniture.css
@@ -20,6 +20,13 @@
     padding: 20px 45px;
     margin-top: 2em;
     letter-spacing: 0.025em;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+.furniture-btn:hover{
+    background: white;
+    color: #6cb606;
 }
 
 @media screen and (max-width: 768px){
