--- a/instatour/css/last.css
+++ b/instatour/css/last.css
@@ -47,7 +47,7 @@
   padding: 25px 0;
   font-size: 50px;
   color: white;
-  font-family: actobat-bold;
+  font-family: acrobat-black;
 }
 
 .last-tarif > div{
