--- a/instatour/css/wyw.css
+++ b/instatour/css/wyw.css
@@ -3,23 +3,26 @@
   flex-direction: row;
   align-items: center;
   max-width: 490px;
-  margin-left: 20px;
+  margin: auto;
 }
 
 .wyw-item-numb{
   font-family: acrobat;
   font-size: 120px;
   color: #333333;
+  flex: 1;
 }
 
 .wyw-item-img{
   padding: 0 30px 0 50px;
+  flex: 1;
 }
 
 .wyw-item-desc{
   font-family: acrobat;
   font-size: 18px;
   color: #333333;
+  flex: 7;
 }
 
 .wyw-items{
