--- a/instatour/css/whytour.css
+++ b/instatour/css/whytour.css
@@ -9,3 +9,13 @@
   right: 0;
   bottom: -20px;
 }
+
+@media screen and (max-width: 450px){
+  .why-tour-right{
+    display: none;
+  }
+  
+  .why-tour-left{
+    display: none;
+  }
+}
